<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_text_white_87"
    tools:context="code.gift.qr.kenny.qrgiftcode.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_light_green_500"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_margin="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/logo_blanco"
                android:layout_marginBottom="-20dp"
                android:layout_weight="0.5"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pos"
                android:id="@+id/textView3"
                android:layout_weight="0.5"
                android:gravity="bottom"
                android:paddingBottom="5dp"
                android:textStyle="bold"
                android:textSize="30dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_text"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/md_text"
            android:id="@+id/editText"
            android:textColorHint="@color/md_lime_50"
            android:hint="@string/user"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_text"
            android:id="@+id/textView2"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/editText2"
            android:textColor="@color/md_text"
            android:textColorHint="@color/md_lime_50"
            android:hint="@string/pass"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_login"
            android:id="@+id/btn_login"
            android:background="@color/md_light_green_600"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp" />


    </LinearLayout>



</LinearLayout>
